--- a/requirements.txt
+++ b/requirements.txt
@@ -1,13 +1,24 @@
 anyio==3.6.2
 certifi==2023.5.7
+contourpy==1.0.7
+cycler==0.11.0
+fonttools==4.39.4
 greenlet==2.0.2
 h11==0.14.0
 httpcore==0.17.0
 httpx==0.24.0
 idna==3.4
+kiwisolver==1.4.4
+matplotlib==3.7.1
+numpy==1.24.3
+packaging==23.1
+Pillow==9.5.0
 psycopg2-binary==2.9.6
+pyparsing==3.0.9
+python-dateutil==2.8.2
 python-dotenv==1.0.0
 python-telegram-bot==20.3
+six==1.16.0
 sniffio==1.3.0
 SQLAlchemy==2.0.13
 SQLAlchemy-Utils==0.41.1
